fixed script src

--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@
       </div>
     </div>
 
-    <script src="js/index.js"></script>
+    <script src="js/assignment-8.js"></script>
   </body>
 </html>
